--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
   <link rel="icon" href="/favicon/favicon.ico" type="image/x-icon">
 
   <!-- Android Chrome Favicons -->
-  <link rel="icon" type="image/png" sizes="192x192" href="/favicon/android-chrome-192x192.png">
+  <!-- <link rel="icon" type="image/png" sizes="192x192" href="/favicon/android-chrome-192x192.png"> -->
   <link rel="icon" type="image/png" sizes="512x512" href="/favicon/android-chrome-512x512.png">
 
   <meta name="description"
